app/src/test/resources/programs/valid/foreign/no_arguments.exe
foreign foo get_zero() -> Int

foo main() -> Int {
    get_zero() 
}