app/src/test/resources/programs/invalid/loops/BreakLoopOutsideOfLoop.exe
foo main() -> Int = {
    // Use of break outside of loop
    break 1
}